src/objects/CH_OutboundMessageSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List of settings to control which outbound messages could be sent to external systems</description>
    <fields>
        <fullName>CaseFeedEmailCauseAnalysisReport__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case Feed Email = Cause Analysis Report</description>
        <inlineHelpText>Allow to send outbound message when Case Feed Email = Cause Analysis Report</inlineHelpText>
        <label>Case Feed Email Cause Analysis Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseFeedEmailCustomerInformationRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case Feed Email = Customer Information Request</description>
        <inlineHelpText>Allow to send outbound message when Case Feed Email = Customer Information Request</inlineHelpText>
        <label>Case FeedEmailCustomerInformationRequest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseFeedEmailInitialResponse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case Feed Email = Initial Response</description>
        <inlineHelpText>Allow to send outbound message when Case Feed Email = Initial Response</inlineHelpText>
        <label>Case Feed Email Initial Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseFeedEmailRestoration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case Feed Email = Restoration</description>
        <inlineHelpText>Allow to send outbound message when Case Feed Email = Restoration</inlineHelpText>
        <label>Case Feed Email Restoration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseFeedEmailServiceDisruptionReport__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case Feed Email = Service Disruption Report</description>
        <inlineHelpText>Allow to send outbound message when Case Feed Email = Service Disruption Report</inlineHelpText>
        <label>Case Feed Email Service DisruptionReport</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseFeedEmailSolution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case Feed Email = Solution</description>
        <inlineHelpText>Allow to send outbound message when Case Feed Email = Solution</inlineHelpText>
        <label>Case Feed Email Solution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseFeedEmailTemporary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case Feed Email = Temporary</description>
        <inlineHelpText>Allow to send outbound message when Case Feed Email = Temporary</inlineHelpText>
        <label>Case Feed Email Temporary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseFeedEmailUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case Feed Email = Update</description>
        <inlineHelpText>Allow to send outbound message when Case Feed Email = Update</inlineHelpText>
        <label>Case Feed Email Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseStageAssetRespond__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case Stage = Asset and Respond</description>
        <inlineHelpText>Allow to send outbound message when Case Stage = Asset and Respond</inlineHelpText>
        <label>Case Stage Asset and Respond</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseStageClose__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case Stage = Close</description>
        <inlineHelpText>Allow to send outbound message when Case Stage = Close</inlineHelpText>
        <label>Case Stage Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseStageDiagnosisTechnicalAnalysis__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case Stage = Diagnosis and Technical Analysis</description>
        <inlineHelpText>Allow to send outbound message when Case Stage = Diagnosis and Technical Analysis</inlineHelpText>
        <label>Case Stage Diagnosis and Tech Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseStageInvestigateRestore__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case Stage = Investigate and Restore</description>
        <inlineHelpText>Allow to send outbound message when Case Stage = Investigate and Restore</inlineHelpText>
        <label>Case Stage Investigate and Restore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseStageRegister__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case Stage = Register</description>
        <inlineHelpText>Allow to send outbound message when Case Stage = Register</inlineHelpText>
        <label>Case Stage Register</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseStageResolve__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case Stage = Resolve</description>
        <inlineHelpText>Allow to send outbound message when Case Stage = Resolve</inlineHelpText>
        <label>Case Stage Resolve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseStageRoute__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case Stage = Route</description>
        <inlineHelpText>Allow to send outbound message when Case Stage = Route</inlineHelpText>
        <label>Case Stage Route</label>
        <type>Checkbox</type>
    </fields>
    <label>CH Outbound Message Settings</label>
</CustomObject>